--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -1,3 +1,22 @@
-$red:green;
+@import "base";
 
-a{color:red}
+body {
+  text-align: center;
+  @include background(radial-gradient(#fff, #c3c3c3));
+  padding-top:50px;
+}
+
+#container {
+  width: 900px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.alert {
+  padding:0.5em 1em;
+  margin-bottom:1em;
+}
+
+.content {
+  background:#fff;
+}
