--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -3,7 +3,7 @@
 body {
   text-align: center;
   @include background(radial-gradient(#fff, #c3c3c3));
-  padding-top:50px;
+  padding-top: 50px;
 }
 
 #container {
@@ -13,12 +13,16 @@ body {
 }
 
 .alert {
-  padding:0.5em 1em;
-  margin-bottom:1em;
+  padding: 0.5em 1em;
+  margin-bottom: 1em;
 }
 
 .content {
-  background:#fff;
-  border:1px solid $borderGray;
-  padding:16px;
+  background: #fff;
+  border: 1px solid $borderGray;
+  padding: 16px;
+}
+
+
+.alert-error {
 }
