--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -7,6 +7,8 @@ h1 {
   background: url(../images/logo.png) left center no-repeat;
   display: inline-block;
   text-transform: uppercase;
+  font-family: Arvil, Arial;
+  // FIXME THIS FONT IS BROKEN!!!
 
   strong {
     font-size: 1em;
@@ -108,3 +110,65 @@ ul.subNav {
     }
   }
 }
+
+ul.breadcrumbs {
+  display: inline-block;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    display: inline-block;
+    font-size: 0.85em;
+
+    a {
+      color: #767676;
+    }
+  }
+
+  li ~ li:before {
+    content: ' > ';
+  }
+}
+
+ul.welcome {
+  float: right;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  font-size: 0.85em;
+
+  li {
+    display: inline-block;
+
+    a {
+      color: #545d63;
+      margin: 0 0.25em;
+      font-weight: bold;
+    }
+  }
+
+  li + li ~ li:before {
+    content: ' | ';
+  }
+
+  .avatar {
+    vertical-align: middle;
+    height: 16px;
+    width: 16px;
+    margin-right: 4px;
+
+  }
+
+}
+
+h2 {
+  color: #565656;
+  font-family: Arial;
+  font-size:1.5em;
+  font-weight: bold;
+
+}
+
+
+
