--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -7,7 +7,7 @@ h1 {
   background: url(../images/logo.png) left center no-repeat;
   display: inline-block;
   text-transform: uppercase;
-  font-family: Arvil, Arial;
+  font-family: 'Arvil Sans', Arial;
   // FIXME THIS FONT IS BROKEN!!!
 
   strong {
