--- a/media/css/fonts.css
+++ b/media/css/fonts.css
@@ -6,9 +6,9 @@
 @import "zen";              // Add the Zen Grids responsive layout mixins.
 */
 @font-face {
-  font-family: 'Arvil';
-  src: url("fonts/arvil_sans-webfont.eot");
-  src: url("fonts/arvil_sans-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/arvil_sans-webfont.woff") format("woff"), url("fonts/arvil_sans-webfont.ttf") format("truetype"), url("fonts/arvil_sans-webfont.svg#arvil_sansregular") format("svg");
+  font-family: 'Arvil Sans';
+  src: url("../fonts/arvil_sans-webfont.eot");
+  src: url("../fonts/arvil_sans-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/arvil_sans-webfont.woff") format("woff"), url("../fonts/arvil_sans-webfont.ttf") format("truetype"), url("../fonts/arvil_sans-webfont.svg#arvil_sansregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
