--- a/media/css/fonts.css
+++ b/media/css/fonts.css
@@ -12,3 +12,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'UniversLTStd';
+  src: url("fonts/UniversLTStd.eot");
+  src: url("fonts/UniversLTStd.eot?#iefix") format("embedded-opentype"), url("fonts/UniversLTStd.woff") format("woff"), url("fonts/UniversLTStd.ttf") format("truetype"), url("fonts/UniversLTStd.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
