--- a/media/css/main.css
+++ b/media/css/main.css
@@ -65,3 +65,45 @@ ul.sideNav li:after {
 ul.sideNav li.selected:after {
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAHCAMAAAA2/j1wAAAAM1BMVEUSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhPJKAuDAAAAEHRSTlMAhPoSuzjld/kMtP4u3273KDpR6AAAAC9JREFUeF5dyLcBACAMAzCH2sv/10KGDEajIO4QwAeOJyYKlcsXqK1bmDEp1NoaFymYBHmq1F0xAAAAAElFTkSuQmCC");
 }
+
+/* line 55, ../scss/main.scss */
+ul.pageNav {
+  display: inline-block;
+  background: #3d628c;
+  color: #d5d5d5;
+  -webkit-border-radius: 0.25em 0.25em 0 0;
+  -moz-border-radius: 0.25em 0.25em 0 0;
+  -ms-border-radius: 0.25em 0.25em 0 0;
+  -o-border-radius: 0.25em 0.25em 0 0;
+  border-radius: 0.25em 0.25em 0 0;
+  border: 1px solid #3d628c;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+/* line 65, ../scss/main.scss */
+ul.pageNav li {
+  display: inline-block;
+}
+/* line 68, ../scss/main.scss */
+ul.pageNav li a {
+  display: inline-block;
+  background: #fff;
+}
+/* line 73, ../scss/main.scss */
+ul.pageNav li a, ul.pageNav li span {
+  padding: 0.25em 0.5em;
+}
+/* line 77, ../scss/main.scss */
+ul.pageNav li.firstPage a:before {
+  content: '<< ';
+}
+/* line 80, ../scss/main.scss */
+ul.pageNav li.lastPage a:after {
+  content: ' >>';
+}
+/* line 84, ../scss/main.scss */
+ul.pageNav li.curPage a {
+  background: #3d628c;
+  color: #d5d5d5;
+}
