--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -19,7 +19,7 @@ h1 {
       text-transform: uppercase;
       content: 'Skeyler';
       position: absolute;
-      @include transform(scaleY(0.4) skewX(-20deg) translateX(-7px) translateY(-6px));
+      @include transform(scaleY(0.4) skewX(-20deg) translateX(-6px) translateY(-6px));
       @include transform-origin(50%, 100%);
       line-height: 1.0;
       pointer-events: none;
@@ -42,7 +42,7 @@ h1 {
     vertical-align: top;
 
     em {
-      color: #F7931D;
+      color: $orange;
       font-weight: bold;
       vertical-align: top;
       text-shadow: 0 0 0.25em rgba(0, 0, 0, .1);
@@ -161,6 +161,10 @@ ul.welcome {
 
   li + li ~ li:before {
     content: ' | ';
+  }
+
+  li:first-child {
+    margin-right:1.5em;
   }
 
   .avatar {
