--- a/media/scss/fonts.scss
+++ b/media/scss/fonts.scss
@@ -11,10 +11,7 @@
 @font-face {
   font-family: 'UniversLTStd';
   src: url('fonts/UniversLTStd.eot');
-  src: url('fonts/UniversLTStd.eot?#iefix') format('embedded-opentype'),
-  url('fonts/UniversLTStd.woff') format('woff'),
-  url('fonts/UniversLTStd.ttf') format('truetype'),
-  url('fonts/UniversLTStd.svg') format('svg');
+  src: url('fonts/UniversLTStd.eot?#iefix') format('embedded-opentype'), url('fonts/UniversLTStd.woff') format('woff'), url('fonts/UniversLTStd.ttf') format('truetype'), url('fonts/UniversLTStd.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
