--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -58,6 +58,7 @@ ul.pageNav {
   color: #d5d5d5;
   @include border-radius(0.25em 0.25em 0 0);
   border: 1px solid $subforumBg;
+  border-bottom: none;
   list-style: none;
   margin: 0;
   padding: 0;
