--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -90,6 +90,13 @@ ul.pageNav {
 
 }
 
-
+$tags: (vip, mod, admin, dev, super, owner);
+@each $tag in $tags {
+  .tag-#{$tag}:before {
+    content: quote($tag);
+    display: inline-block;
+    // todo add background images instead of content text
+  }
+}
 
 
