--- a/media/css/main.css
+++ b/media/css/main.css
@@ -37,36 +37,41 @@ body {
 }
 
 /* line 26, ../scss/main.scss */
+.clr {
+  clear: both;
+}
+
+/* line 30, ../scss/main.scss */
 ul.sideNav {
   margin: 0;
   padding: 0;
   display: inline-block;
   position: relative;
 }
-/* line 32, ../scss/main.scss */
+/* line 36, ../scss/main.scss */
 ul.sideNav li {
   display: inline-block;
   position: absolute;
   margin-bottom: 7px;
 }
-/* line 37, ../scss/main.scss */
+/* line 41, ../scss/main.scss */
 ul.sideNav li a {
   color: #fff;
   padding: 12px 16px 12px 28px;
 }
-/* line 42, ../scss/main.scss */
+/* line 46, ../scss/main.scss */
 ul.sideNav li:after {
   position: absolute;
   top: -7px;
   left: 0;
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAHCAMAAADZPFZOAAAAM1BMVEX///93d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3cFyiH2AAAAEHRSTlMA+oQSuzjld/kMtP4u32734uF19AAAAC5JREFUeF5VyLcRwDAAAzEqZ9n7T6tj+SghxfCDpJQ5VirHWsfYmAtj+3Dsfp4HOYMEea3gTjEAAAAASUVORK5CYII=");
 }
-/* line 49, ../scss/main.scss */
+/* line 53, ../scss/main.scss */
 ul.sideNav li.selected:after {
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAHCAMAAAA2/j1wAAAAM1BMVEUSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhPJKAuDAAAAEHRSTlMAhPoSuzjld/kMtP4u3273KDpR6AAAAC9JREFUeF5dyLcBACAMAzCH2sv/10KGDEajIO4QwAeOJyYKlcsXqK1bmDEp1NoaFymYBHmq1F0xAAAAAElFTkSuQmCC");
 }
 
-/* line 55, ../scss/main.scss */
+/* line 59, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   background: #3d628c;
@@ -82,64 +87,94 @@ ul.pageNav {
   margin: 0;
   padding: 0;
 }
-/* line 66, ../scss/main.scss */
+/* line 70, ../scss/main.scss */
+ul.pageNav.right {
+  float: right;
+}
+/* line 74, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
 }
-/* line 69, ../scss/main.scss */
+/* line 77, ../scss/main.scss */
 ul.pageNav li a {
   display: inline-block;
   background: #fff;
 }
-/* line 74, ../scss/main.scss */
+/* line 82, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   padding: 0.25em 0.5em;
 }
-/* line 78, ../scss/main.scss */
+/* line 86, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 81, ../scss/main.scss */
+/* line 89, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 85, ../scss/main.scss */
+/* line 93, ../scss/main.scss */
 ul.pageNav li.curPage a {
   background: #3d628c;
   color: #d5d5d5;
 }
+/* line 98, ../scss/main.scss */
+ul.pageNav li:last-child a {
+  -webkit-border-radius: 0 0.125em 0 0;
+  -moz-border-radius: 0 0.125em 0 0;
+  -ms-border-radius: 0 0.125em 0 0;
+  -o-border-radius: 0 0.125em 0 0;
+  border-radius: 0 0.125em 0 0;
+}
+/* line 103, ../scss/main.scss */
+ul.pageNav.bottom {
+  -webkit-border-radius: 0 0 0.25em 0.25em;
+  -moz-border-radius: 0 0 0.25em 0.25em;
+  -ms-border-radius: 0 0 0.25em 0.25em;
+  -o-border-radius: 0 0 0.25em 0.25em;
+  border-radius: 0 0 0.25em 0.25em;
+  border: 1px solid #3d628c;
+  border-top: none;
+}
+/* line 108, ../scss/main.scss */
+ul.pageNav.bottom li:last-child a {
+  -webkit-border-radius: 0 0 0.125em 0;
+  -moz-border-radius: 0 0 0.125em 0;
+  -ms-border-radius: 0 0 0.125em 0;
+  -o-border-radius: 0 0 0.125em 0;
+  border-radius: 0 0 0.125em 0;
+}
 
-/* line 95, ../scss/main.scss */
+/* line 117, ../scss/main.scss */
 .tag-vip:before {
   content: url("../images/tags/vip.png");
   display: inline-block;
 }
 
-/* line 95, ../scss/main.scss */
+/* line 117, ../scss/main.scss */
 .tag-mod:before {
   content: url("../images/tags/mod.png");
   display: inline-block;
 }
 
-/* line 95, ../scss/main.scss */
+/* line 117, ../scss/main.scss */
 .tag-admin:before {
   content: url("../images/tags/admin.png");
   display: inline-block;
 }
 
-/* line 95, ../scss/main.scss */
+/* line 117, ../scss/main.scss */
 .tag-dev:before {
   content: url("../images/tags/dev.png");
   display: inline-block;
 }
 
-/* line 95, ../scss/main.scss */
+/* line 117, ../scss/main.scss */
 .tag-super:before {
   content: url("../images/tags/super.png");
   display: inline-block;
 }
 
-/* line 95, ../scss/main.scss */
+/* line 117, ../scss/main.scss */
 .tag-owner:before {
   content: url("../images/tags/owner.png");
   display: inline-block;
